# serial_port

./: .gitignore  CMakeLists.txt  README.md
src/: AddDirectiveDlg.cpp  AddDirectiveDlg.h  DataUtil.cpp  DataUtil.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SerialPort.cpp  SerialPort.h  images.qrc  logo.aps  logo.rc  main.cpp
src/resource/: images.qrc
src/ui/: AddDirectiveDlg.ui  MainWindow.ui
